stop overflow from scrolling when a question is open

--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -67,6 +67,7 @@
     }
 }
 
-.is-open {
+.is-open,
+.is-open body {
     overflow: hidden;
 }
